Fixed shift edit card UI

--- a/app/components/shiftEdit/shiftEdit.css
+++ b/app/components/shiftEdit/shiftEdit.css
@@ -12,7 +12,7 @@
 .container {
     position: fixed;
     width: 80%;
-    height: 90%;
+    height: 570px;
     background-color: #f3f3f3;
     box-shadow: 4px 4px 30px 5px #5d5d5d;
     border-radius: 3px;
@@ -22,7 +22,6 @@
     bottom: 0;
     z-index: 1001;
     margin: auto;
-    min-height: 250px;
     max-width: 1100px;
     user-select: none;
 }
@@ -80,8 +79,7 @@ label {
 }
 
 .sector-title {
-    font-size: 22px;
-    margin-top: 15px;
+    font-size: 22px;    
     margin-bottom: 5px;
     text-decoration: underline;
 }
@@ -164,7 +162,7 @@ label {
 }
 
 .workers-view {
-    height: 40%;
+    height: calc(40% - 15px);
     overflow: auto;
     position: relative;
 }
